# cxx-sized-int-literals

./: .gitignore  CMakeLists.txt  FixedWidthIntLiterals.h  LICENSE.md  Readme.md  SizedIntLiterals.h  TestMain.cpp
